--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1953,9 +1953,7 @@ BannerHeight=184
 [LyricDisplay]
 InCommand=shadowlength,0;zoomy,0;spring,0.20;zoomy,1;
 OutCommand=linear,0.20;zoomy,0
-//Affects Lyrics PreSwipe 1 = no Swipe
-Alpha=.5 
-WashOut=2 //Bigger number = Larger effect
+WipeDimFactor=0.5,0.5,0.5,0.5
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
