--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2100,7 +2100,7 @@ Caution=Toggle whether the Caution screen is shown.
 OniScoreDisplay=Toggle whether the score in Oni mode displays Dance Points or the Dance Percent.
 SongGroup=Toggle whether the Select Group screen is shown.
 WheelSections=ALWAYS means sections in group + ABC; NEVER means no sections;::ABC ONLY shows sections in just ABC sort
-Translations=Choose whether to displays song titles in their native::language (???), or to transliterate when possible
+Translations=Choose whether to displays song titles in their native::language (日本語), or to transliterate when possible
 Lyrics=Choose whether to show lyrics if a song::has them available (LRC File)
 10+footInRed=Choose where 10 footers or higher are displayed::in red on the song select wheel.
 CourseSort=Determines how courses are sorted.
