--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1955,6 +1955,15 @@ InCommand=shadowlength,0;zoomy,0;spring,0.20;zoomy,1;
 OutCommand=linear,0.20;zoomy,0
 WipeDimFactor=0.5,0.5,0.5,0.5
 
+[LifeMeterBattery Percent]
+PercentP1X=+20
+PercentP1Y=0
+PercentP1OnCommand=zoom,0.7;shadowlength,0;diffuse,0.4,1.0,0.8,1
+PercentP2X=-20
+PercentP2Y=0
+PercentP2OnCommand=zoom,0.7;shadowlength,0;diffuse,1.0,0.5,0.2,1
+Precision=2
+
 [ScoreKeeperRave]
 AttackDurationSeconds=10
 
