--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1962,7 +1962,9 @@ PercentP1OnCommand=zoom,0.7;shadowlength,0;diffuse,0.4,1.0,0.8,1
 PercentP2X=-20
 PercentP2Y=0
 PercentP2OnCommand=zoom,0.7;shadowlength,0;diffuse,1.0,0.5,0.2,1
-Precision=2
+DancePointsDigits=5
+PercentDecimalPlaces=1
+PercentTotalSize=4
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
