--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1106,30 +1106,14 @@ PercentFrameP2X=546
 PercentFrameP2Y=100
 PercentFrameP2OnCommand=addx,320;sleep,0.0;decelerate,0.3;addx,-320
 PercentFrameP2OffCommand=sleep,0.8;accelerate,0.3;addx,320
-PercentWholeP1X=120
-PercentWholeP1Y=132
-PercentWholeP1OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;addx,-320;sleep,0.0;decelerate,0.3;addx,320
-PercentWholeP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
-PercentWholeP2X=572
-PercentWholeP2Y=132
-PercentWholeP2OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;addx,320;sleep,0.0;decelerate,0.3;addx,-320
-PercentWholeP2OffCommand=sleep,0.8;accelerate,0.3;addx,320
-PercentRemainderP1X=120
-PercentRemainderP1Y=132
-PercentRemainderP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;addx,-320;sleep,0.0;decelerate,0.3;addx,320
-PercentRemainderP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
-PercentRemainderP2X=572
-PercentRemainderP2Y=132
-PercentRemainderP2OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;addx,320;sleep,0.0;decelerate,0.3;addx,-320
-PercentRemainderP2OffCommand=sleep,0.8;accelerate,0.3;addx,320
-DancePointsP1X=94
-DancePointsP1Y=100
-DancePointsP1OnCommand=glowshift;effectperiod,2;addx,-320;sleep,0.0;decelerate,0.3;addx,320
-DancePointsP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
-DancePointsP2X=546
-DancePointsP2Y=100
-DancePointsP2OnCommand=glowshift;effectperiod,2;addx,320;sleep,0.0;decelerate,0.3;addx,-320
-DancePointsP2OffCommand=sleep,0.8;accelerate,0.3;addx,320
+PercentP1X=120
+PercentP1Y=132
+PercentP1OnCommand=addx,-320;sleep,0.0;decelerate,0.3;addx,320
+PercentP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
+PercentP2X=572
+PercentP2Y=132
+PercentP2OnCommand=addx,320;sleep,0.0;decelerate,0.3;addx,-320
+PercentP2OffCommand=sleep,0.8;accelerate,0.3;addx,320
 MarvelousLabelX=320
 MarvelousLabelY=160
 MarvelousLabelOnCommand=addy,480;sleep,0.1;decelerate,0.3;addy,-480
@@ -1959,12 +1943,68 @@ WipeDimFactor=0.5,0.5,0.5,0.5
 PercentP1X=+20
 PercentP1Y=0
 PercentP1OnCommand=zoom,0.7;shadowlength,0;diffuse,0.4,1.0,0.8,1
+PercentP1OffCommand=
 PercentP2X=-20
 PercentP2Y=0
 PercentP2OnCommand=zoom,0.7;shadowlength,0;diffuse,1.0,0.5,0.2,1
+PercentP2OffCommand=
+DancePointsP1X=+20
+DancePointsP1Y=0
+DancePointsP1OnCommand=zoom,0.7;shadowlength,0;diffuse,0.4,1.0,0.8,1
+DancePointsP1OffCommand=
+DancePointsP2X=-20
+DancePointsP2Y=0
+DancePointsP2OnCommand=zoom,0.7;shadowlength,0;diffuse,0.4,1.0,0.8,1
+DancePointsP2OffCommand=
+
+
 DancePointsDigits=5
 PercentDecimalPlaces=1
 PercentTotalSize=4
+PercentUseRemainder=0
+
+[ScreenEvaluationOni Percent]
+PercentP1X=0
+PercentP1Y=0
+PercentP1OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
+PercentP1OffCommand=
+PercentP2X=0
+PercentP2Y=0
+PercentP2OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
+PercentP2OffCommand=
+PercentRemainderP1X=0
+PercentRemainderP1Y=0
+PercentRemainderP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;shadowlength,0
+PercentRemainderP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
+PercentRemainderP2X=0
+PercentRemainderP2Y=0
+PercentRemainderP2OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;shadowlength,0
+PercentRemainderP2OffCommand=sleep,0.8;accelerate,0.3
+DancePointsP1X=-26
+DancePointsP1Y=-32
+DancePointsP1OnCommand=glowshift;effectperiod,2;shadowlength,0
+DancePointsP1OffCommand=sleep,0.8;accelerate,0.3
+DancePointsP2X=-26
+DancePointsP2Y=-32
+DancePointsP2OnCommand=glowshift;effectperiod,2;shadowlength,0
+DancePointsP2OffCommand=sleep,0.8;accelerate,0.3
+
+DancePointsDigits=1
+PercentDecimalPlaces=1
+PercentTotalSize=4
+PercentUseRemainder=1
+
+
+[ScoreDisplayPercentage Percent]
+PercentP1X=+20
+PercentP1Y=0
+PercentP1OnCommand=zoom,1.0;shadowlength,0;diffuse,0.4,1.0,0.8,1
+PercentP2X=-20
+PercentP2Y=0
+PercentP2OnCommand=zoom,1.0;shadowlength,0;diffuse,1.0,0.5,0.2,1
+DancePointsDigits=5
+PercentDecimalPlaces=3
+PercentTotalSize=6
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
