--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1998,13 +1998,17 @@ PercentUseRemainder=1
 [ScoreDisplayPercentage Percent]
 PercentP1X=+20
 PercentP1Y=0
-PercentP1OnCommand=zoom,1.0;shadowlength,0;diffuse,0.4,1.0,0.8,1
+PercentP1OnCommand=shadowlength,0;diffuse,0.4,1.0,0.8,1
+PercentP1OffCommand=
 PercentP2X=-20
 PercentP2Y=0
-PercentP2OnCommand=zoom,1.0;shadowlength,0;diffuse,1.0,0.5,0.2,1
+PercentP2OnCommand=shadowlength,0;diffuse,1.0,0.5,0.2,1
+PercentP2OffCommand=
+
 DancePointsDigits=5
 PercentDecimalPlaces=3
 PercentTotalSize=6
+PercentUseRemainder=0
 
 [ScoreKeeperRave]
 AttackDurationSeconds=10
