--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -54,11 +54,16 @@ CD:StepMania:$INSTALLING
 #Ignore the CVS directories
 IGNORE:CVS
 
+#Privileges are not needed
+PRIVILEGED:
+
 #Install the files
 FILE:Announcers/instructions.txt:OVERWRITE
 FILE:BGAnimations/instructions.txt:OVERWRITE
 FILE:CDTitles/instructions.txt:OVERWRITE
-FILE:Characters/instructions.txt:OVERWRITE
+RM:Characters/default
+FILE:Characters/default:OVERWRITE
+#FILE:Characters/instructions.txt:OVERWRITE
 FILE:Courses/instructions.txt:OVERWRITE
 FILE:Courses/Samples:OVERWRITE
 RM:NoteSkins/common/default
@@ -92,8 +97,8 @@ FILE:StepMania.app:OVERWRITE
 FILE:/usr/bin/atos:
 
 #Ask the user to install libaries
-#ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? If you have already installed them, choose "No".
-ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? There are new versions of libraries to be installed. Choosing "Yes" is recommended.
+ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? If you have already installed them, choose "No".
+#ASK:INSTALL_LIBS:Would you like to install the necessary libraries to run StepMania? There are new versions of libraries to be installed. Choosing "Yes" is recommended.
 IF:$INSTALL_LIBS:LIBS:END
 #nothing else for now
 GOTO:END
@@ -545,7 +550,6 @@ RETURN:1
 LABEL:AUTH_FAILED
 ECHO:Could not install library files because authentication failed.:LOUD
 RETURN:2
-
 
 #this needs to be at the very end of the file barring comments
 LABEL:END
