ScreenEvaluationOni Percent -> ScreenEvaluation Percent

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1963,7 +1963,7 @@ PercentDecimalPlaces=1
 PercentTotalSize=4
 PercentUseRemainder=0
 
-[ScreenEvaluationOni Percent]
+[ScreenEvaluation Percent]
 PercentP1X=0
 PercentP1Y=0
 PercentP1OnCommand=horizalign,right;vertalign,bottom;glowshift;effectperiod,2;shadowlength,0
