--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -1,8 +1,8 @@
 bin_PROGRAMS = stepmania
 
 AM_LDFLAGS =
-AM_CXXFLAGS = -O2
-AM_CFLAGS = -O2
+AM_CXXFLAGS = 
+AM_CFLAGS = 
 
 if NHAVE_SDL
 AM_CXXFLAGS += -ISDL-1.2.6/include
