remove decode movie MS add menu item for movie texture color add better presets for Radeon 7xxx

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2017,7 +2017,7 @@ AttackDurationSeconds=10
 TimerSeconds=20
 StyleIcon=1
 
-[ScreenInputOptions]
+[ScreenOptionsMasterPrefs]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutoMapOnJoyChange=&oq;ON&cq; will cause StepMania automatically remap::all the joysticks attached to your computer if the joysticks::attached to your system are different than the last time you::started the game.  Auto mapping will override any::manually defined mappings.
 MenuButtons=The default setting allows the dance pad's panels to navigate::the menus.  Changing this to &oq;dedicated only&cq; will restrict::menu navigation to only the Menu* set of buttons.  Be sure to map::the Menu* set of buttons before setting this to &oq;dedicated&cq;!
@@ -2038,10 +2038,26 @@ Line4=conf,BackDelayed
 Line5=conf,OptionsNavigation
 Line6=conf,WheelSpeed
 
+[ScreenCoinOptions]
+HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
+CoinMode=When set to HOME, options will be shown on the title screen.::When set to PAY the title menu choices are hidden and you must::insert coins before joining in.  When set to FREE the title menu::choices are hidden and you can joining in without inserting coins.
+SongsPerPlay=The number of songs a player can play in Arcade mode.::Set this to &oq;Event Mode&cq;, and you can continue playing forever.::Also, when this option is set to &oq;Unlimited&cq;, failing will take you::back to the the Select Music or Select Course screen.
+CoinsPerCredit=The number of coins that must be inserted before a player can join.
+JointPremium=When set to OFF, game styles that require both sides of the machine::will cost 2 credits.  When set to ON game styles that require both sides::of the machine will cost only 1 credit. 
+StyleIcon=0
+TimerSeconds=0
+PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
+NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
+
+OptionMenuFlags=rows,4;together;explanations
+Line1=conf,CoinMode
+Line2=conf,SongsPerPlay
+Line3=conf,CoinsPerCredit
+Line4=conf,JointPremium
+
 [ScreenMachineOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 MenuTimer=Turn this &oq;OFF&cq; to disable the time limit in menus.
-SongsPerPlay=The number of songs a player can play in Arcade mode.::Set this to &oq;Event Mode&cq;, and you can continue playing forever.::Also, when this option is set to &oq;Unlimited&cq;, failing will take you::back to the the Select Music or Select Course screen.
 ScoringType=Defines which scoring method to use.
 JudgeDifficulty=Increase this value to cause your steps to be judged more strictly::(i.e. shrink the timing window).
 LifeDifficulty=Increase this value to cause your life meter to::drain faster and refill slower.
@@ -2049,39 +2065,32 @@ ProgressiveLifebar=Set whether the lifebar is harsher on consecutive boo/miss ju
 ProgressiveStageLifebar=Determine whether the lifebar gets harsher on later stages.::  LifeDifficulty + this = Lifedifficulty on a final stage.  Has no::effect on event mode.
 ProgressiveNonstopLifebar=Determine whether the lifebar gets harsher as a nonstop course::progresses.  LifeDifficulty + this = Lifedifficulty on a final stage of a course.
 DefaultFailType=Choose the conditions for game over.::ARCADE will stop the music immediately when all players have 0 life.::END OF SONG will cause the game to end at the conclusion of the current song::if all players failed at some point during the song.::OFF disables game over entirely.
-CoinMode=When set to HOME, options will be shown on the title screen.::When set to PAY the title menu choices are hidden and you must::insert coins before joining in.  When set to FREE the title menu::choices are hidden and you can joining in without inserting coins.
-CoinsPerCredit=The number of coins that must be inserted before a player can join.
-JointPremium=When set to OFF, game styles that require both sides of the machine::will cost 2 credits.  When set to ON game styles that require both sides::of the machine will cost only 1 credit. 
 ShowSongOptions=Select the availability of the Song Options screen.::When HIDE, it can not be accessed.  When SHOW, it will always be shown.::When set to ASK, it can be accessed by pressing START a::second time after the Player Options screen.
 StyleIcon=0
 TimerSeconds=0
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,13;together;explanations
+OptionMenuFlags=rows,9;together;explanations
 Line1=conf,MenuTimer
-Line2=conf,CoinMode
-Line3=conf,SongsPerPlay
-Line4=conf,ScoringType
-Line5=conf,JudgeDifficulty
-Line6=conf,LifeDifficulty
-Line7=conf,ProgressiveLifebar
-Line8=conf,ProgressiveStageLifebar
-Line9=conf,ProgressiveNonstopLifebar
-Line10=conf,DefaultFailType
-Line11=conf,CoinsPerCredit
-Line12=conf,JointPremium
-Line13=conf,ShowSongOptions
+Line2=conf,ScoringType
+Line3=conf,JudgeDifficulty
+Line4=conf,LifeDifficulty
+Line5=conf,ProgressiveLifebar
+Line6=conf,ProgressiveStageLifebar
+Line7=conf,ProgressiveNonstopLifebar
+Line8=conf,DefaultFailType
+Line9=conf,ShowSongOptions
 
 [ScreenGraphicOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 DisplayMode=Choose whether you would like StepMania to run full screen,::or to display in a window on your desktop.
 DisplayColor=Choose the color depth of the StepMania window.::This option may not take effect in windowed mode.
 TextureColor=Choose the color depth of textures.::32 bit texture use more memory, but look nicer.
+MovieColor=Choose the color depth of textures.::32 bit texture use more memory, but look nicer.
 DisplayResolution=Choose the output resolution.  A higher resolution::will show more detail, but requires a faster video card.
 TextureResolution=Choose the maximum texture resolution.  Setting this::to anything below 1024 will cause some textures to appear blurry,::but may increase your frame rate.
 RefreshRate=Controls how many times per second the screen will refresh.::This setting only has an effect when the Display Mode::is set to &oq;full screen&cq;.
-MovieDecode=When a movie texture is being used, StepMania will spend this much time::between each frame to decode the next frame of the movie.  If your frame rate::is high but movie texures skip, then increase this value.
 WaitForVsync=Wait for the monitor's vertical retrace before displaying::the next frame.  This option only has an effect when the::Display Mode is set to &oq;full screen&cq;.  Turning this option off will not::cap your frame rate to the refresh rate, but may result in &oq;tearing&cq;.
 KeepTexturesInMemory=Set to ON hold textures in memory instead of::freeing them.  This will eliminate the time needed to load::the texture next from disk next time this is needed.  Do not set to ON::unless you have 128MB of memory or more.
 ShowStats=Display Performance Statistics in the upper right corner::of the screen.  FPS = frames per second.::TPF = triangles per frame.  DPF = draws per frame.
@@ -2096,9 +2105,9 @@ Line2=conf,DisplayResolution
 Line3=conf,DisplayColor
 Line4=conf,TextureResolution
 Line5=conf,TextureColor
-Line6=conf,KeepTexturesInMemory
-Line7=conf,RefreshRate
-Line8=conf,MovieDecode
+Line6=conf,MovieColor
+Line7=conf,KeepTexturesInMemory
+Line8=conf,RefreshRate
 Line9=conf,WaitForVsync
 Line10=conf,ShowStats
 
@@ -2544,18 +2553,19 @@ OptionMenuFlags=together;forceallplayers;rows,11;smnavigation
 # This NextScreen is only used for the "exit" choice.
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
-NumRows=11
+NumRows=12
 Line1=list,Appearance Options;title,;
 Line2=list,Autogen Options;title,;
 Line3=list,Background Options;title,;
-Line4=list,Config Key/Joy Mappings;title,;
-Line5=list,Input Options;title,;
-Line6=list,Gameplay Options;title,;
-Line7=list,Graphic Options;title,;
-Line8=list,Machine Options;title,;
-Line9=list,Sound Options;title,;
-Line10=list,Profile Options;title,;
-Line11=list,Reload Songs/Courses;title,;
+Line4=list,Coin Options;title,;
+Line5=list,Config Key/Joy Mappings;title,;
+Line6=list,Input Options;title,;
+Line7=list,Gameplay Options;title,;
+Line8=list,Graphic Options;title,;
+Line9=list,Machine Options;title,;
+Line10=list,Sound Options;title,;
+Line11=list,Profile Options;title,;
+Line12=list,Reload Songs/Courses;title,;
 
 [TextBanner]
 Width=180
@@ -3044,6 +3054,10 @@ Background Options=1,together
 Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
 Background OptionsName,1=Background Options
+Coin Options=1,together
+Coin OptionsDefault=
+Coin Options,1=screen,ScreenCoinOptions@ScreenOptionsMaster
+Coin OptionsName,1=Coin Options
 Config Key/Joy Mappings=1,together
 Config Key/Joy MappingsDefault=
 Config Key/Joy Mappings,1=screen,ScreenMapControllers
