Pop'n Music Update - Theme - Noteskin
You can now make the music wheel into a 'staircase'

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1670,6 +1670,7 @@ ScrollBarX=148
 ScrollBarHeight=368
 ItemCurveX=85
 ItemSpacingY=46
+NoCurving=0
 NumWheelItems=13
 NumSectionColors=7
 SectionColor1=0.8,0.1,0.6,1	// pink
