Load CJK fonts as grayscale.  Simplify.

--- a/stepmania/Themes/default/Fonts/_japanese 16px.ini
+++ b/stepmania/Themes/default/Fonts/_japanese 16px.ini
@@ -4,27 +4,21 @@
 
 # Constructed from MS Gothic, 8pt, 72 pixels/cm, "Strong" antialiasing.
 
-[main]
+[common]
 Top=8
 Baseline=23
 LineSpacing=20
+TextureHints=grayscale 16bpp
+DefaultWidth=20
 
+[main]
 # This page maps to basic-japanese (Unicode U+3000 to U+30FF.)
 range basic-japanese=0
-
-# All characters on this page have a width of 20 pixels; it's a strictly
-# monospaced font.
-DefaultWidth=20
 
 # Smaller center dot.
 251=10
 
 [kanji 1]
-Top=8
-Baseline=23
-LineSpacing=20
-DefaultWidth=20
-
 line 0=一二三四五六七八
 line 1=九十本語＆（）？
 line 2=！
@@ -35,11 +29,6 @@ line 6=弾新谷大見解魔法
 line 7=扉夜空才遅伝説真
 
 [kanji 2]
-Top=8
-Baseline=23
-LineSpacing=20
-DefaultWidth=20
-
 line 0=朝来晴決戦曜恋好
 line 1=林原浜崎笠弘子倉
 line 2=木麻衣村由姫松緒
@@ -50,11 +39,6 @@ line 6=地丙太郎会野順人
 line 7=時金月春色風中勇
 
 [kanji 3]
-Top=8
-Baseline=23
-LineSpacing=20
-DefaultWidth=20
-
 line 0=気比奈夕怪娘菅家
 line 1=庭用悪矩形波倶楽
 line 2=部城上祐司榎温後
@@ -65,11 +49,6 @@ line 6=観測綾岩琢長沼英
 line 7=夏秋冬連花夢式情
 
 [kanji 4]
-Top=8
-Baseline=23
-LineSpacing=20
-DefaultWidth=20
-
 line 0=惡憎敎有析武死生
 line 1=男眠胎自魂女宏和
 line 2=魅惑音頭踊貸与園
