--- a/stepmania/Themes/default/Fonts/_korean 24px.ini
+++ b/stepmania/Themes/default/Fonts/_korean 24px.ini
@@ -1,14 +1,11 @@
-﻿[main]
-Top=5
-Baseline=26
-LineSpacing=28
-
-[jamo 1]
+﻿[common]
 Top=5
 Baseline=26
 LineSpacing=28
 DefaultWidth=28
+TextureHints=grayscale 16bpp
 
+[jamo 1]
 line 0=경고교굴기길나넛
 line 1=놀누는니단도듀라
 line 2=랑래랩레련로론루
@@ -19,11 +16,6 @@ line 6=써쓰애야어에영옝
 line 7=와요워위유윤이잉
 
 [jamo 2]
-Top=5
-Baseline=26
-LineSpacing=28
-DefaultWidth=28
-
 line 0=자잦잭젠준지직찾
 line 1=책초치캉커쿨크클
 line 2=키타틴파팍패플피
@@ -34,11 +26,6 @@ line 6=민국성숙가감강같
 line 7=거건검게곡과구그
 
 [jamo 3]
-Top=5
-Baseline=26
-LineSpacing=28
-DefaultWidth=28
-
 line 0=김께꼭꾸꿍난널네
 line 1=녀논눈님더돌둥드
 line 2=들따때또뛰띠렁렛
@@ -49,11 +36,6 @@ line 6=양억언엄업여연예
 line 7=오올우울원은을의
 
 [jamo 4]
-Top=5
-Baseline=26
-LineSpacing=28
-DefaultWidth=28
-
 line 0=잊제젝조존좋줘증
 line 1=진집짜착찬처추칼
 line 2=큰탑터투트티펌페
