PnM Theme Update -- ScreenGameplay.
Can now have a static background overlay on screengameplay

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -818,6 +818,8 @@ StyleIcon=1
 NextScreen=ScreenGameplay
 
 [ScreenGameplay]
+StaticBGY=240
+StaticBGX=320
 PrevScreenArcade=ScreenSelectMusic
 PrevScreenNonstop=ScreenSelectCourse
 PrevScreenOni=ScreenSelectCourse
