Rename ScreenOptionsMasterPrefs back to ScreenInputOptions.  (How'd that happen?)
Add DefaultModifiers.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -18,6 +18,7 @@ ColorP1=0.4,1.0,0.8,1		// sea green
 ColorP2=1.0,0.5,0.2,1		// orange
 InitialScreen=ScreenCompany
 WindowTitle=StepMania
+DefaultModifiers=
 
 [ModeSwitcher]
 PrevModeX=-200
@@ -2020,7 +2021,7 @@ AttackDurationSeconds=10
 TimerSeconds=20
 StyleIcon=1
 
-[ScreenOptionsMasterPrefs]
+[ScreenInputOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
 AutoMapOnJoyChange=&oq;ON&cq; will cause StepMania automatically remap::all the joysticks attached to your computer if the joysticks::attached to your system are different than the last time you::started the game.  Auto mapping will override any::manually defined mappings.
 MenuButtons=The default setting allows the dance pad's panels to navigate::the menus.  Changing this to &oq;dedicated only&cq; will restrict::menu navigation to only the Menu* set of buttons.  Be sure to map::the Menu* set of buttons before setting this to &oq;dedicated&cq;!
