Added: Beatmania style arrow-block thingies that appear when you press a key More Pop'n Noteskin Fun.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -819,6 +819,7 @@ StyleIcon=1
 NextScreen=ScreenGameplay
 
 [ScreenGameplay]
+PressBlockY=10
 StaticBGY=240
 StaticBGX=320
 PrevScreenArcade=ScreenSelectMusic
