--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2648,7 +2648,7 @@ Line2=list,Accel;title,Acceler::-ation
 Line3=list,Effect
 Line4=list,Appearance;title,Appear::-ance
 Line5=list,Turn
-Line6=list,Transform;title,Trans\n-form
+Line6=list,Transform;title,Trans::-form
 Line7=list,Scroll
 Line8=list,NoteSkins
 Line9=list,Holds
