Fix hidden not turning off

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2845,7 +2845,7 @@ Effect,7=mod,tipsy
 EffectName,7=TIPSY
 
 Appearance=6
-AppearanceDefault=mod,no sudden,no stealth,no blink,no randomvanish
+AppearanceDefault=mod,no hidden,no sudden,no stealth,no blink,no randomvanish
 Appearance,1=
 AppearanceName,1=VISIBLE
 Appearance,2=mod,hidden
