add half-finished screen centering code (necessary for arcade and Xbox)

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1747,6 +1747,11 @@ OddLineOut=stoptweening;accelerate,0.3;addx,640;
 StyleIcon=0
 TimerSeconds=0
 
+[ScreenCenterImage]
+HelpText=Use arrow keys to navigate, ENTER to assign, SPACE to clear, ESCAPE when done.
+StyleIcon=0
+TimerSeconds=0
+
 [HoldGhostArrow]
 WarmUpSeconds=0.25
 
@@ -2558,19 +2563,20 @@ OptionMenuFlags=together;forceallplayers;rows,11;smnavigation
 # This NextScreen is only used for the "exit" choice.
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
-NumRows=12
+NumRows=13
 Line1=list,Appearance Options;title,;
 Line2=list,Autogen Options;title,;
 Line3=list,Background Options;title,;
-Line4=list,Coin Options;title,;
-Line5=list,Config Key/Joy Mappings;title,;
-Line6=list,Input Options;title,;
-Line7=list,Gameplay Options;title,;
-Line8=list,Graphic Options;title,;
-Line9=list,Machine Options;title,;
-Line10=list,Sound Options;title,;
-Line11=list,Profile Options;title,;
-Line12=list,Reload Songs/Courses;title,;
+Line4=list,Center Image;title,;
+Line5=list,Coin Options;title,;
+Line6=list,Config Key/Joy Mappings;title,;
+Line7=list,Input Options;title,;
+Line8=list,Gameplay Options;title,;
+Line9=list,Graphic Options;title,;
+Line10=list,Machine Options;title,;
+Line11=list,Sound Options;title,;
+Line12=list,Profile Options;title,;
+Line13=list,Reload Songs/Courses;title,;
 
 [TextBanner]
 Width=180
@@ -3059,6 +3065,10 @@ Background Options=1,together
 Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
 Background OptionsName,1=Background Options
+Center Image=1,together
+Center ImageDefault=
+Center Image,1=screen,ScreenCenterImage
+Center ImageName,1=Center Image
 Coin Options=1,together
 Coin OptionsDefault=
 Coin Options,1=screen,ScreenCoinOptions@ScreenOptionsMaster
