finish input test screen

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1748,7 +1748,12 @@ StyleIcon=0
 TimerSeconds=0
 
 [ScreenCenterImage]
-HelpText=Use arrow keys to navigate, ENTER to assign, SPACE to clear, ESCAPE when done.
+HelpText=Use arrow keys to translate.::Hold SHIFT and press the arrow keys to scale.::Press SPACE to reset centering.  Press ESCAPE when done.
+StyleIcon=0
+TimerSeconds=0
+
+[ScreenTestInput]
+HelpText=Press any button or key.  Press ESCAPE when done.
 StyleIcon=0
 TimerSeconds=0
 
@@ -2559,11 +2564,10 @@ TimerSeconds=0
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-OptionMenuFlags=together;forceallplayers;rows,11;smnavigation
+OptionMenuFlags=together;forceallplayers;rows,14;smnavigation
 # This NextScreen is only used for the "exit" choice.
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
-NumRows=13
 Line1=list,Appearance Options;title,;
 Line2=list,Autogen Options;title,;
 Line3=list,Background Options;title,;
@@ -2577,6 +2581,7 @@ Line10=list,Machine Options;title,;
 Line11=list,Sound Options;title,;
 Line12=list,Profile Options;title,;
 Line13=list,Reload Songs/Courses;title,;
+Line14=list,Test Input;title,;
 
 [TextBanner]
 Width=180
@@ -3105,4 +3110,8 @@ Reload Songs/Courses=1,together
 Reload Songs/CoursesDefault=
 Reload Songs/Courses,1=screen,ScreenReloadSongs
 Reload Songs/CoursesName,1=Reload Songs/Courses
+Test Input=1,together
+Test InputDefault=
+Test Input,1=screen,ScreenTestInput
+Test InputName,1=Test Input
 
