add option for silent attract

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2403,15 +2403,17 @@ HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::
 MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
 ResamplingQuality=Advanced: Select the resampling quality to use.
+AttractSound=Set to ON to play sound during the attract screens.::Set to OFF to mute sounds durring attract.
 StyleIcon=0
 TimerSeconds=0
 
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,2;together;explanations
+OptionMenuFlags=rows,3;together;explanations
 Line1=conf,PreloadSounds
 Line2=conf,ResamplingQuality
+Line3=conf,AttractSound
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
