--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2404,16 +2404,18 @@ MasterVolume=
 PreloadSounds=If YES, preload most sounds in advance.  This increases load times,::and should normally be left OFF.
 ResamplingQuality=Advanced: Select the resampling quality to use.
 AttractSound=Set to ON to play sound during the attract screens.::Set to OFF to mute sounds durring attract.
+SoundVolume=
 StyleIcon=0
 TimerSeconds=0
 
 PrevScreen=ScreenOptionsMenu@ScreenOptionsMaster
 NextScreen=ScreenOptionsMenu@ScreenOptionsMaster
 
-OptionMenuFlags=rows,3;together;explanations
+OptionMenuFlags=rows,4;together;explanations
 Line1=conf,PreloadSounds
 Line2=conf,ResamplingQuality
 Line3=conf,AttractSound
+Line4=conf,SoundVolume
 
 [ScreenIntroMovie]
 NextScreen=ScreenDemonstration
