add basic bookkeeping

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1757,6 +1757,11 @@ HelpText=Press any button or key.  Press ESCAPE when done.
 StyleIcon=0
 TimerSeconds=0
 
+[ScreenBookkeeping]
+HelpText=Press any button or key.  Press ESCAPE when done.
+StyleIcon=0
+TimerSeconds=0
+
 [HoldGhostArrow]
 WarmUpSeconds=0.25
 
@@ -2568,24 +2573,25 @@ TimerSeconds=0
 # when using entries that change the screen; otherwise, the only way to
 # exit the screen when in arcade mode is "exit".
 
-OptionMenuFlags=together;forceallplayers;rows,14;smnavigation
+OptionMenuFlags=together;forceallplayers;rows,15;smnavigation
 # This NextScreen is only used for the "exit" choice.
 NextScreen=ScreenTitleMenu
 PrevScreen=ScreenTitleMenu
 Line1=list,Appearance Options;title,;
 Line2=list,Autogen Options;title,;
 Line3=list,Background Options;title,;
-Line4=list,Center Image;title,;
-Line5=list,Coin Options;title,;
-Line6=list,Config Key/Joy Mappings;title,;
-Line7=list,Input Options;title,;
-Line8=list,Gameplay Options;title,;
-Line9=list,Graphic Options;title,;
-Line10=list,Machine Options;title,;
-Line11=list,Sound Options;title,;
-Line12=list,Profile Options;title,;
-Line13=list,Reload Songs/Courses;title,;
-Line14=list,Test Input;title,;
+Line4=list,Bookkeeping;title,;
+Line5=list,Center Image;title,;
+Line6=list,Coin Options;title,;
+Line7=list,Config Key/Joy Mappings;title,;
+Line8=list,Input Options;title,;
+Line9=list,Gameplay Options;title,;
+Line10=list,Graphic Options;title,;
+Line11=list,Machine Options;title,;
+Line12=list,Sound Options;title,;
+Line13=list,Profile Options;title,;
+Line14=list,Reload Songs/Courses;title,;
+Line15=list,Test Input;title,;
 
 [TextBanner]
 Width=180
@@ -3074,6 +3080,10 @@ Background Options=1,together
 Background OptionsDefault=
 Background Options,1=screen,ScreenBackgroundOptions@ScreenOptionsMaster
 Background OptionsName,1=Background Options
+Bookkeeping=1,together
+BookkeepingDefault=
+Bookkeeping,1=screen,ScreenBookkeeping
+BookkeepingName,1=Bookkeeping
 Center Image=1,together
 Center ImageDefault=
 Center Image,1=screen,ScreenCenterImage
