overhaul ranking/high score data structures

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2391,17 +2391,27 @@ PointsStartX=380
 PointsStartY=140
 TimeStartX=560
 TimeStartY=140
+PercentStartX=560
+PercentStartY=140
+PercentColSpacingX=100
+PercentColSpacingY=0
 SecondsPerPage=5
 ShowCategories=1
+ShowAllSongs=0
 CoursesToShow=Courses/DDRMAX/NaokiStandard.crs,Courses/DDRMAX/ParanoiaBrothers.crs,Courses/Samples/PlayersBest1-4.crs
 NotesTypesToHide=dance-couple,dance-solo,pump-halfdouble
 TextColor1=0.6,0.6,1,1
 TextColor2=1,0.3,0.3,1
 TextColor3=0.3,1,0.3,1
+EmptyScoreName=STEP
+EmptyCategoryScore=53700
+EmptyCourseScore=537
+EmptyCourseTime=60
 # Not all game types have NotesTypesToHide set, so add a few dummy colors
 # to prevent a crash.
 TextColor4=1.0,1,1.0,1
 TextColor5=1.0,1,1.0,1
+
 
 [ScreenSoundOptions]
 HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
