--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2485,6 +2485,7 @@ NumCharsToDrawBehind=2
 NumCharsToDrawTotal=10
 FakeBeatsPerSec=2.5
 TimerSeconds=24
+MaxRankingNameLength=4
 StyleIcon=1
 
 [EditMenu]
